--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+
+.container{
+  width: 50%;
+  margin: 1px auto;
+}
+
+.quiz-Outside{
+  display: flex;
+  justify-content: center;
+}
+
+.btn {
+  width: 60%;
+  margin: 1px auto;
+  display: flex;
+  justify-content: space-between;
+}
